--- a/Ho v Minton/index.html
+++ b/Ho v Minton/index.html
@@ -5,7 +5,7 @@
     <title>Ho et al. v. Minton, Lassen, AYHMH Arbitration</title>
     <link rel="icon" href="https://apiia.org/lawsuit_docs/letter%20A.png">
     
-    <link rel="stylesheet" href="./Ho v Minton_files/styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1205.0" data-gr-ext-installed="">
