--- a/Ho v Minton/index.html
+++ b/Ho v Minton/index.html
@@ -18,26 +18,26 @@
         <br>
         <a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/Index/3E67E3790D83E1414A7D78E2B601DA88367E9CD5D40EBE541130BF79DAE4EC82738D70571C921BFAC330752D81E55BAAA9FD7B929A957DAB46EA6EA8853FF18640995C5B56122491CB78C7527CB6BE9D?caseNum=19-CIV-07253&amp;docType=Public&amp;docName=First%20Amended%20Complaint&amp;eventName=First%20Amended%20Complaint&amp;docTypeId=3&amp;isVersionId=False&amp;p=0" target="_blank">Link to First Amended Complaint on Court website</a> <br>
         <br>
-        <a href="https://apiia.org/lawsuit2_docs/Request%20for%20Arbitration%20of%20a%20Fee%20Dispute%20filed%2012-10-19.pdf" target="_blank">Request for Arbitration of a Fee Dispute</a><br>
+        <a href="https://Ho v Minton_docs/Request%20for%20Arbitration%20of%20a%20Fee%20Dispute%20filed%2012-10-19.pdf" target="_blank">Request for Arbitration of a Fee Dispute</a><br>
         <br>
         <br>
-        Here is the <a href="https://apiia.org/lawsuit2_docs/(Minton)%20ALL%20EMAILS%20in%20one%20file.pdf" target="_blank">Complete Set of Emails</a> between Peter Ho et al. and John Minton et al.<br>
+        Here is the <a href="https://Ho v Minton_docs/(Minton)%20ALL%20EMAILS%20in%20one%20file.pdf" target="_blank">Complete Set of Emails</a> between Peter Ho et al. and John Minton et al.<br>
         <br>
     
         Some emails with Minton:
         <ul>
-            <li><a href="https://apiia.org/lawsuit2_docs/2017-09-26%20Road%20Map.pdf" target="_blank">2017-09-26 Road Map</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-09-07%20Prepared%20for%20trial%20and%20Trial%20Strategy.pdf" target="_blank">2018-09-07 Prepared for trial and Trial Strategy</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-07-11%20Trying%20to%20be%20efficent%20and%20not%20go%20back%20through%20to%20find%20details.pdf" target="_blank">2018-07-11 Trying to be efficent and not go back through to find details</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-06-02%20Save%20money.pdf" target="_blank">2018-06-02 Save money by having us do most of the work</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-07-29%20Not%20including%20forged%20Gift%20Letter%20in%20Garcia&#39;s%20Declaration.pdf" target="_blank">2018-07-29 Not including forged Gift Letter in Garcia's Declaration</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-07-29%20Not%20including%20Gift%20Letter%20in%20Garcia&#39;s%20Declaration.pdf" target="_blank">2018-07-29 Not including Gift Letter in Garcia's Declaration</a></li>
-             <li><a href="https://apiia.org/lawsuit2_docs/2018-07-29%20Not%20including%20Gift%20Letter%20in%20Garcia&#39;s%20Declaration.pdf" target="_blank">2018-07-29 Helping him prepare for the depositions</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-08-10%20One%20or%20more%20of%20you%20are%20poring%20through%20supplemental%20production%20ccv.pdf" target="_blank">2018-08-10 One or more of you are poring through supplemental productionc so let me know if I need to look at it</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-08-16%20Insisting%20on%20talking%20to%20us%20individually%20about%20settlement.pdf" target="_blank">2018-08-16 Insisting on talking to us seaprately about settlement to break our united stance which is to go to trial</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2017-10-17%20Trusting%20us%20on%20legal%20process.pdf" target="_blank">2017-10-17 Trusting us on legal process</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-08-16%20Insisting%20on%20talking%20to%20us%20individually%20about%20settlement.pdf" target="_blank">2018-08-16 Ready for trial in a week (1 deposition, no expert witnesses, no witnesses lined up). At that time, trial was around the corner in 2 months.</a></li>
-            <li><a href="https://apiia.org/lawsuit2_docs/2018-08-16%20Insisting%20on%20talking%20to%20us%20individually%20about%20settlement.pdf" target="_blank">2018-08-16 No trial brief. When asked for a trial brief, only a half page list of witnesses.</a></li>
+            <li><a href="https://Ho v Minton_docs/2017-09-26%20Road%20Map.pdf" target="_blank">2017-09-26 Road Map</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-09-07%20Prepared%20for%20trial%20and%20Trial%20Strategy.pdf" target="_blank">2018-09-07 Prepared for trial and Trial Strategy</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-07-11%20Trying%20to%20be%20efficent%20and%20not%20go%20back%20through%20to%20find%20details.pdf" target="_blank">2018-07-11 Trying to be efficent and not go back through to find details</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-06-02%20Save%20money.pdf" target="_blank">2018-06-02 Save money by having us do most of the work</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-07-29%20Not%20including%20forged%20Gift%20Letter%20in%20Garcia&#39;s%20Declaration.pdf" target="_blank">2018-07-29 Not including forged Gift Letter in Garcia's Declaration</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-07-29%20Not%20including%20Gift%20Letter%20in%20Garcia&#39;s%20Declaration.pdf" target="_blank">2018-07-29 Not including Gift Letter in Garcia's Declaration</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-07-29%20Not%20including%20Gift%20Letter%20in%20Garcia&#39;s%20Declaration.pdf" target="_blank">2018-07-29 Helping him prepare for the depositions</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-08-10%20One%20or%20more%20of%20you%20are%20poring%20through%20supplemental%20production%20ccv.pdf" target="_blank">2018-08-10 One or more of you are poring through supplemental productionc so let me know if I need to look at it</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-08-16%20Insisting%20on%20talking%20to%20us%20individually%20about%20settlement.pdf" target="_blank">2018-08-16 Insisting on talking to us seaprately about settlement to break our united stance which is to go to trial</a></li>
+            <li><a href="https://Ho v Minton_docs/2017-10-17%20Trusting%20us%20on%20legal%20process.pdf" target="_blank">2017-10-17 Trusting us on legal process</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-08-16%20Insisting%20on%20talking%20to%20us%20individually%20about%20settlement.pdf" target="_blank">2018-08-16 Ready for trial in a week (1 deposition, no expert witnesses, no witnesses lined up). At that time, trial was around the corner in 2 months.</a></li>
+            <li><a href="https://Ho v Minton_docs/2018-08-16%20Insisting%20on%20talking%20to%20us%20individually%20about%20settlement.pdf" target="_blank">2018-08-16 No trial brief. When asked for a trial brief, only a half page list of witnesses.</a></li>
         </ul>
             
         <hr>
