--- a/Ho v Chang/index.html
+++ b/Ho v Chang/index.html
@@ -12,22 +12,22 @@
     
     <p class="header">Ho v. Chang: Superior Court of California, County of San Mateo Case #17-PRO-00973</p>
 
-    <span style="font-style:normal"><a href="https://apiia.org/lawsuit_docs/2024-04-15%2017-PRO-00973%20-%20Judgment%20(1).pdf" target="_blank">Judgment</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/2024-04-15%2017-PRO-00973%20-%20Judgment%20(1).pdf" target="_blank">Judgment</a></span><br>
     <span style="font-style:normal"><a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/Index/4392378D349CD0087F59A3EBD9C5A3C6527E5223D6BD46E2050059DB5B6290CE2397200B11A6BD2936815585633A4227F8009601A48C01E768C4B48ECB383674F62FC7155EBFC2342E11824359B7A83D?caseNum=17-PRO-00973&amp;docType=Public&amp;docName=Judgment&amp;docTypeId=3&amp;isVersionId=False&amp;p=0" target="_blank">Link to Judgment on Superior Court of San Mateo County's website</a></span><br>
     <br>
-    <span style="font-style:normal"><a href="https://apiia.org/lawsuit_docs/Ho_%20%20Redwood%20City%20Police%20Report%20(1).PDF" target="_blank">Police Report</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/Ho_%20%20Redwood%20City%20Police%20Report%20(1).PDF" target="_blank">Police Report</a></span><br>
     <br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1HU7jmoGeIcj4eYt1Bg-1kNEyW_IIeDIX/view?usp=sharing" target="_blank">2023-09-18 DAY 1 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1bAwHZzVmgg61u2k4ssohjshuLVEkn-aa/view?usp=sharing" target="_blank">2023-09-19 DAY 2 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1DHR-dXmpq0QyjsOAealSaGGcZNbFTBtw/view?usp=sharing" target="_blank">2023-09-20 DAY 3 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1E7Lm96zaEa2vLwaHvkNSTBUT-zaw9oQH/view?usp=sharing" target="_blank">2023-09-21 DAY 4 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1_PB58nHfLsxTSM1SBcwo5pVVm5rnMKSZ/view?usp=sharing" target="_blank">2023-09-22 DAY 5 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1LICxGEa0V4oDZk-vGjCr68LbxMJf9bPW/view?usp=sharing" target="_blank">2023-09-25 DAY 6 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1utSpsABL21JgCNIAxS8ruz7ir_5RMbGZ/view?usp=sharing" target="_blank">2023-09-26 DAY 7 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1lRKwBp0JIpHF0lZ1S1oj2-nsNv4dplmU/view?usp=sharing" target="_blank">2023-09-27 DAY 8 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1_lfCKU-jPLBWkYMElH6iD5NoQJXu2YM0/view?usp=sharing" target="_blank">2023-12-11 DAY 9 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1O9AkHSD9PR4POFGrAwzYfS7XV3vzHEww/view?usp=sharing" target="_blank">2023-12-14 DAY 10 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
-    <span style="font-style:normal"><a href="https://drive.google.com/file/d/1FkOpMiQe236wapv8EpyblEgLj7tldIH1/view?usp=sharing" target="_blank">2023-12-15 DAY 11 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 1 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-18 DAY 1 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 2 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-19 DAY 2 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 3 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-20 DAY 3 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 4 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-21 DAY 4 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 5 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-22 DAY 5 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 6 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-25 DAY 6 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 7 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-26 DAY 7 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 8 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-27 DAY 8 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 9 TRIAL (CERTIFIED).pdf" target="_blank">2023-12-11 DAY 9 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 10 TRIAL (CERTIFIED).pdf" target="_blank">2023-12-14 DAY 10 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
+    <span style="font-style:normal"><a href="https://Ho v Chang_docs/HO DAY 11 ARB (CERTIFIED).pdf" target="_blank">2023-12-15 DAY 11 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
     <br>
     <span style="font-style:normal"><a href="https://odyportal-ext.sanmateocourt.org/Portal-External/Home/WorkspaceMode?p=0" target="_blank">Link to website of Superior Court of San Mateo County</a></span><br>
     
