--- a/Ho v Chang/index.html
+++ b/Ho v Chang/index.html
@@ -15,7 +15,7 @@
     <span style="font-style:normal"><a href="./Ho v Chang_docs/2024-04-15%2017-PRO-00973%20-%20Judgment%20(1).pdf" target="_blank">Judgment</a></span><br>
     <span style="font-style:normal"><a href="https://odyportal-ext.sanmateocourt.org/Portal-External/DocumentViewer/Index/4392378D349CD0087F59A3EBD9C5A3C6527E5223D6BD46E2050059DB5B6290CE2397200B11A6BD2936815585633A4227F8009601A48C01E768C4B48ECB383674F62FC7155EBFC2342E11824359B7A83D?caseNum=17-PRO-00973&amp;docType=Public&amp;docName=Judgment&amp;docTypeId=3&amp;isVersionId=False&amp;p=0" target="_blank">Link to Judgment on Superior Court of San Mateo County's website</a></span><br>
     <br>
-    <span style="font-style:normal"><a href="./Ho v Chang_docs/Ho_%20%20Redwood%20City%20Police%20Report%20(1).PDF" target="_blank">Police Report</a></span><br>
+    <span style="font-style:normal"><a href="./Ho v Chang_docs/Ho_%20%20Redwood%20City%20Police%20Report%20(1).pdf" target="_blank">Police Report</a></span><br>
     <br>
     <span style="font-style:normal"><a href="./Ho v Chang_docs/HO DAY 1 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-18 DAY 1 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
     <span style="font-style:normal"><a href="./Ho v Chang_docs/HO DAY 2 TRIAL (CERTIFIED).pdf" target="_blank">2023-09-19 DAY 2 TRIAL TRANSCRIPT (CERTIFIED)</a></span><br>
