--- a/Ho v Chang/index.html
+++ b/Ho v Chang/index.html
@@ -33,7 +33,7 @@
     
     <hr>
     <br>
-     <span style="font-style:normal">We sued <b>Attorney John D. Minton for malpractice.</b>  <a href="https://apiia.org/lawsuit2.html" target="_blank">Here contains the proof</a>.<br>
+     <span style="font-style:normal">We sued <b>Attorney John D. Minton for malpractice.</b>  <a href="./Ho v Minton/index.html" target="_blank">Here contains the proof</a>.<br>
      Here is the link to the case on the <a href="https://odyportal-ext.sanmateocourt.org/Portal-External/Home/WorkspaceMode?p=0" target="_blank">Superior Court of San Mateo County website</a>.<br>
      Here is the link to the case on the <a href="https://trellis.law/case/19-civ-07253/peter-ho-et-al-vs-john-minton-et-al" target="_blank">trellis website</a>.<br>
      <br>
